@startuml

title __BOOKING's Class Diagram__\n

  package  {
    package booking {
      interface Booking {
          {abstract} + getTotalCost()
          {abstract} + getListOfCosts()
          {abstract} + addChildBooking()
          {abstract} + removeChildBooking()
          {abstract} + getListOfNames()
          {abstract} + getListOfTypeOfComposites()
          {abstract} + getNumberOfChildBookings()
      }
    }
  }
  

  package  {
    package booking {
      class BookingComposite {
          - childBookings : ArrayList<Booking>
          + getNumberOfChildBookings()
          + getTotalCost()
          + getListOfCosts()
          + addChildBooking()
          + removeChildBooking()
          + getListOfNames()
          + getListOfTypeOfComposites()
      }
    }
  }
  

  package  {
    package booking {
      class FlightBooking {
          - routeName : String
          - cost : Double
          - type : String
          - childBookings : ArrayList<Booking>
          + FlightBooking()
          + getNumberOfChildBookings()
          + getTotalCost()
          + getListOfCosts()
          + addChildBooking()
          + removeChildBooking()
          + getListOfNames()
          + getListOfTypeOfComposites()
      }
    }
  }
  

  package  {
    package booking {
      class HotelBooking {
          - hotelName : String
          - cost : Double
          - type : String
          - childBookings : ArrayList<Booking>
          + HotelBooking()
          + getNumberOfChildBookings()
          + getTotalCost()
          + getListOfCosts()
          + addChildBooking()
          + removeChildBooking()
          + getListOfNames()
          + getListOfTypeOfComposites()
      }
    }
  }
  

  BookingComposite -up-|> Booking
  FlightBooking -up-|> Booking
  HotelBooking -up-|> Booking


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
